--- a/index.html
+++ b/index.html
@@ -93,9 +93,119 @@
                         <h4 class="person__border">
                             2. Доходы по ИНПС 
                         </h4>
-                        <img src="./img/money.png.crdownload" width="100%" height="340px" alt="">
+                        <table class="money__table">
+                            <tr class="money__table__tr">
+                                <th class="money__table__tr__th">N</th>
+                                <th class="money__table__tr__th">Год и месяц</th>
+                                <th class="money__table__tr__th">Источники дохода</th>
+                                <th class="money__table__tr__th">ИНН источники дохода</th>
+                                <th class="money__table__tr__th">Дата</th>
+                                <th class="money__table__tr__th">Сумма</th>
+                                <th class="money__table__tr__th">Сумма дохода </th>
+                            </tr>
+                            <tr class="money__table__tr">
+                                <td class="money__table__tr__td">1</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                            <tr>
+                                <td class="money__table__tr__td">2</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                            <tr>
+                                <td class="money__table__tr__td">3</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                            <tr>
+                                <td class="money__table__tr__td">4</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                            <tr>
+                                <td class="money__table__tr__td">5</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                            <tr>
+                                <td class="money__table__tr__td">6</td>
+                                <td class="money__table__tr__td">2019 Ноябрь</td>
+                                <td class="money__table__tr__td">OOO "A R T"</td>
+                                <td class="money__table__tr__td">321 200 123</td>
+                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
+                                <td class="money__table__tr__td">8 000</td>
+                                <td class="money__table__tr__td">8 000 000</td>
+                            </tr>
+                        </table>   
+                        <h3>Итого за период с 2019-11-05 до 2019-20-05</h3>
                     </div>
                 </section>
+
+
+                <section class="credit">
+                    <div class="container">
+                        <h4 class="credit__border">
+                            2. Доходы по ИНПС 
+                        </h4>
+                        <table class="credit__table">
+                            <tr class="credit__table__tr">
+                                <th class="credit__table__tr__th">N</th>
+                                <th class="credit__table__tr__th">Тип кредита</th>
+                                <th class="credit__table__tr__th">Наличие</th>
+                            </tr>
+                            <tr class="credit__table__tr">
+                                <td class="credit__table__tr__td">1</td>
+                                <td class="credit__table__tr__td">Полная кредитная информация</td>
+                                <td class="credit__table__tr__td">Нет</td>
+                            </tr>
+                            <tr class="credit__table__tr">
+                                <td class="credit__table__tr__td">2</td>
+                                <td class="credit__table__tr__td">Скоринг КИАЦ </td>
+                                <td class="credit__table__tr__td">Да</td>
+                            </tr>
+                        </table>   
+                    </div>
+                </section>
+
+                <section class="example">
+
+                    <div class="container">
+                        <h4 class="example__border">
+                            4. Информация
+                        </h4>
+                        <p class="example__p"> 
+                            1. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad voluptas, expedita sunt, qui sapiente animi quos porro vel non ducimus ex alias nostrum minima itaque ipsam velit reiciendis consequuntur repellendus! </p>
+                            
+                            <p class="example__p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quidem odio vitae! </p>
+                            <p class="example__p">3. Lorem ipsum dolor sit. </p>
+                            <p class="example__p">4. Lorem ipsum dolor sit, amet consectetur adipisicing. </p>
+
+                        </p>    
+                    </div>
+
+                </section>
+                
     </main>
 
 </body>
