--- a/second_page.html
+++ b/second_page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word project</title>
+    <title>Word project second list</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -91,75 +91,12 @@
                 <section class="money">
                     <div class="container">
                         <h4 class="person__border">
-                            2. Доходы по ИНПС 
+                            2. Доходы по ИНПС
                         </h4>
-                        <table class="money__table">
-                            <tr class="money__table__tr">
-                                <th class="money__table__tr__th">N</th>
-                                <th class="money__table__tr__th">Год и месяц</th>
-                                <th class="money__table__tr__th">Источники дохода</th>
-                                <th class="money__table__tr__th">ИНН источники дохода</th>
-                                <th class="money__table__tr__th">Дата</th>
-                                <th class="money__table__tr__th">Сумма</th>
-                                <th class="money__table__tr__th">Сумма дохода </th>
-                            </tr>
-                            <tr class="money__table__tr">
-                                <td class="money__table__tr__td">1</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                            <tr>
-                                <td class="money__table__tr__td">2</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                            <tr>
-                                <td class="money__table__tr__td">3</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                            <tr>
-                                <td class="money__table__tr__td">4</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                            <tr>
-                                <td class="money__table__tr__td">5</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                            <tr>
-                                <td class="money__table__tr__td">6</td>
-                                <td class="money__table__tr__td">2019 Ноябрь</td>
-                                <td class="money__table__tr__td">OOO "A R T"</td>
-                                <td class="money__table__tr__td">321 200 123</td>
-                                <td class="money__table__tr__td"><span class="text__color">[2019-12-05]</span></td>
-                                <td class="money__table__tr__td">8 000</td>
-                                <td class="money__table__tr__td">8 000 000</td>
-                            </tr>
-                        </table>   
-                        <h3>Итого за период с 2019-11-05 до 2019-20-05</h3>
-                    </div>
+
+                        <h4 class="money__text">
+                            отсутствует
+                        </h4>
                 </section>
 
 
